增加build.gradle直接打包项目为aab，可利用重命名为jar，并将actions改成aab打包

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ leveldb-c
 .classpath
 .settings
 eclipse-classes
+/platforms/
+build-tools/
+platforms/
+android-sdk/
+node_modules/
+build
+.gradle
