--- a/leveldb-benchmark/build.gradle
+++ b/leveldb-benchmark/build.gradle
@@ -16,12 +16,10 @@ android {
 }
 
 dependencies {
-    implementation 'org.xerial.snappy:snappy-java:1.1.10.4'
-    implementation 'org.iq80.snappy:snappy:0.5'
-    implementation 'com.google.guava:guava:33.4.0-android'
+    implementation project(':leveldb')
     implementation project(':leveldb-api')
-    testImplementation("joda-time:joda-time:2.3")
-    testImplementation("org.testng:testng:6.9.6")
+    implementation 'com.google.guava:guava:33.4.0-android'
+    testImplementation("org.junit.jupiter:junit-jupiter-api:6.1.0-M1")
 }
 
 task ldb_makeJar(type: Copy) {
