修复jcenter()不存在

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Build with Maven
+      - name: Build with gradle
         run: gradle build
 
       - name: Upload file
