--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 buildscript {
    repositories {
        google()
-       jcenter()
+       maven {
+          url "https://repo.grails.org/grails/core/" 
+       }
+       maven {
+          url "https://jcenter.bintray.com" 
+       }
        maven {
           url 'https://oss.sonatype.org/content/repositories/snapshots'
        }
@@ -15,7 +20,12 @@ buildscript {
 allprojects {
    repositories {
        google()
-       jcenter()
+       maven {
+          url "https://repo.grails.org/grails/core/" 
+       }
+       maven {
+          url "https://jcenter.bintray.com" 
+       }
        maven {
           url 'https://oss.sonatype.org/content/repositories/snapshots'
        }
